[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -34.0
margin_right = 100.0
margin_bottom = 34.0

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitBtn")
text = "Jogar"

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Cr√©ditos"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../PlayBtn")
text = "Sair"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
